--- a/train/WebGL_01/index.html
+++ b/train/WebGL_01/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>WebGL Test</title>
     <script src="app.js"></script>
+    <script src="FileHelper.js"></script>
     <script id="vs" type="x-shader/x-vertex">
 
         attribute vec3 position;
@@ -36,5 +37,6 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
+    <div id="panel" class="full" style="top:0px;margin:0px;"></div>
 </body>
 </html>
