--- a/train/WebGL_01/index.html
+++ b/train/WebGL_01/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <title>WebGL Test</title>
+    <link rel="stylesheet" href="app.css" type="text/css" />
+    <link rel="stylesheet" href="lighttool/lt_htmlui.css" type="text/css" />
+    <script src="lighttool/lt_jsloader.js"></script>
     <script src="app.js"></script>
     <script src="FileHelper.js"></script>
     <script id="vs" type="x-shader/x-vertex">
